[package]
name = "ncm-rs"
version = "0.0.6"
edition = "2021"
description = "Neovim configuration manager written in Rust"
repository = "https://github.com/instance-id/ncm-rs"
authors = ["instance-id"]

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
config = "0.13.1"
configparser = "3.0.2"
fs_extra = "1.3.0"
glob = "0.3.1"
inquire = "0.5.3"
lazy_static = "1.4.0"
libc = "0.2.94"
log = "0.4"
prettytable-rs = "^0.10"
serde = "1.0.152"
serde_json = "1.0.93"
simplelog = "0.12.0"
spinners = "4.1.0"
thiserror = "1.0.24"
walkdir = "2.3.2"
zip = "0.6.4"

[dev-dependencies]
ctor = "0.1.26"
tempfile = "3.2.0"
pretty_assertions = "1.3.0"
